# silicon-toaster

./: requirements.txt
calibration/: README.md  calibrate.py  plot-calibration.py  requirements.txt
firmware/: .gitignore  README.md
firmware/src/: adc_control.rs
hw/: .gitignore  bom.py  emfi.kicad_pcb  emfi.kicad_pro  emfi.step  generated_bom.html
hw/gerber/: emfi-B_Cu.gbr  emfi-B_Mask.gbr  emfi-B_Paste.gbr  emfi-B_Silkscreen.gbr  emfi-Edge_Cuts.gbr  emfi-F_Cu.gbr  emfi-F_Mask.gbr  emfi-F_Paste.gbr  emfi-F_Silkscreen.gbr  emfi-NPTH.drl  emfi-PTH.drl
hw/models/: Coilcraft-SCS-xxxL.step  LED_0603.step  to-247-3-bend.step
py/: README.md  pyproject.toml
py/silicontoaster/: silicontoaster.py
silicontoaster/: silicontoaster.py
